--- a/src/style.css
+++ b/src/style.css
@@ -3,40 +3,92 @@
     margin: 0;
     padding: 0;
 }
-/* grid */
-.grid {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    /* grid-template-rows: 1fr; */
-    /* justify-items: start; */
-    /* align-items: start; */
+
+/* basic */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+
 }
-.grid-item {
-    background: #222;
-    text-align: center;
-}
-.grid-item img {
-    width: 100px;
-}
+
 /* header */
 /* nav */
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
 .main-nav {
     display: flex;
     list-style: none;
     font-size: 0.7em;
 }
+
 .main-nav li {
     padding: 20px;
 }
+
 .main-nav a {
     text-decoration: none;
     color: #fff;
 }
+
 .push {
     margin-left: auto;
 }
+
 /* cover */
+.container {
+    margin-top: 66px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+}
+.cover {
+    width: 25rem;
+}
+
+/* grid */
+.grid-wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    /* grid-template-rows: 1fr; */
+    /* justify-items: start; */
+    /* align-items: start; */
+}
+
+.grid-item {
+    background: #444;
+    padding: 30%;
+    margin: 20px;
+    text-align: center;
+}
+
+.grid-item > img {
+    width: 100%;
+}
+
+/* .grid-item:hover {
+    -webkit-transform:rotate(-5deg);
+    -moz-transform:rotate(-5deg);
+    -o-transform:rotate(-5deg);
+    transform:rotate(-5deg);
+} */
+
+@media only screen and (max-width: 600px) {
+    .main-nav {
+        font-size: 0.5em;
+        padding: 0;
+    }
+    .main-nav li {
+        padding: 10px;
+    }
+    .container {
+        margin-top: 38px;
+    }
+}
 
 /* footer */
 .footer {
